--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,7 +61,9 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.2.2f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\Animal.cs" />
     <Compile Include="Assets\Script\Cow.cs" />
+    <Compile Include="Assets\Script\Duck.cs" />
     <Compile Include="Assets\Script\GameManager.cs" />
     <Compile Include="Assets\Script\Chicken.cs" />
   </ItemGroup>
